--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ https://templatemo.com/tm-582-tale-seo-agency
       <div class="row">
         <div class="col-lg-7">
           <div class="caption header-text">
-            <h6>Social Service</h6>
+            <h6>Slamet R</h6>
             <div class="line-dec"></div>
             <h4>Dive <em>Into The Self</em> Worker<span>With DA</span></h4>
             <p>DA is the social worker for the task data analisys using ETL excel. It is a free to provide what you need. <a href="index.html"> Home</a>, <a href="about.html">About</a>, and <a href="faqs.html">FAQ</a>.</p>
